<resources>
    <string name="app_name">Craftindo</string>
    <string name="produk_name">Nama Produk</string>
    <string name="detail">Detail</string>
    <string name="Buy">Buy</string>
    <string name="add_cart">Add to Cart</string>
    <string-array name="gender">
        <item>Laki - Laki</item>
        <item>Perempuan</item>
    </string-array>
    <string-array name="bentuk">
        <item>Bunga</item>
        <item>Fauna</item>
        <item>Abstract</item>
        <item>Bintang</item>
        <item>Ombak</item>
        <item>Primitif</item>
        <item>Klasik</item>
        <item>Modern</item>
    </string-array>
    <string-array name="ukuran">
        <item>100cm x 150cm</item>
        <item>200cm x 300cm</item>
        <item>300cm x 150cm</item>
        <item>400cm x 200cm</item>
    </string-array>
    <string-array name="warna_custom">
        <item>Coklat</item>
        <item>Biru</item>
        <item>Merah</item>
        <item>Hijau</item>
        <item>Kuning</item>
        <item>Abu - Abu</item>
    </string-array>
    <string-array name="kurir">
        <item>JNE</item>
        <item>JNT</item>
        <item>TIKI</item>
        <item>POS INDONESIA</item>
    </string-array>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eleifend quam adipiscing vitae proin sagittis nisl. Non arcu risus quis varius quam quisque id. Nunc consequat interdum varius sit amet mattis vulputate. In vitae turpis massa sed elementum tempus egestas sed sed. Semper feugiat nibh sed pulvinar proin gravida hendrerit. Tellus mauris a diam maecenas sed.</string>
    <string name="deskrip_pembayaran">Silahkan transfer total belanja anda ke rekening dibawah ini :</string>
    <string name="rekening">034101000743303</string>
    <string name="deskrip_cara_pembayaran">Setelah melakukan Checkout Isi Data diri anda pada Form\nTransfer jumlah belanja anda ke rekening yang tertera\nUpload bukti pembayaran setelah melakukan transfer\nTunggu konfirmasi pembayaran melalui email anda.</string>
</resources>
