<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".CheckoutActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Form Pembayaran"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Masukkan nama anda..." />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Masukkan nomor handphone anda..." />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Masukkan alamat anda..." />

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pilih Kurir"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="4dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/kurir" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pembayaran"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="4dp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/deskrip_pembayaran" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rekening"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Step Pembayaran"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="24dp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:justificationMode="inter_word"
            android:text="@string/deskrip_cara_pembayaran" />

        <Button
            android:id="@+id/upload_bukti_pembayaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Upload Bukti Pembayaran"
            android:layout_marginTop="100dp"
            android:layout_gravity="bottom"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark" />

    </LinearLayout>

</ScrollView>